--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.0",
+    "javascript-time-ago": "^2.3.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
