--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@openscreen/sdk": "^0.7.1",
     "dotenv": "^16.0.0",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
