updated the index.js (added API of openscreen)

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+OS_API_KEY = 02QyGYIiQxUcjlJB3B
+OS_API_SECRET = fcnWPSECEIDgrs4hCsuAD4Ex
 API_KEY='AIzaSyBiQ3md8aAmjaTBxZlFUiqwF0t2J1k0zuM'
 AUTH_DOMAIN='anonymousqa-a6743.firebaseapp.com'
 PROJ_ID='anonymousqa-a6743'
