--- a/app.json
+++ b/app.json
@@ -2,6 +2,13 @@
   "expo": {
     "name": "AwesomeProject2",
     "slug": "AwesomeProject2",
+
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
+    
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
